--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
+    "vega": "^5.26.1",
     "zod": "^3.24.2"
   },
   "devDependencies": {
