--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "nextn",
   "version": "0.1.0",
@@ -53,6 +54,7 @@
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "vega": "^5.26.1",
+    "vega-lite": "^5.16.3",
     "zod": "^3.24.2"
   },
   "devDependencies": {
