--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
-    "vega": "^5.26.1",
+    "vega-embed": "^6.22.2",
     "vega-lite": "^5.16.3",
     "zod": "^3.24.2"
   },
