--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "@radix-ui/react-tooltip": "^1.1.8",
     "@tanstack-query-firebase/react": "^1.0.5",
     "@tanstack/react-query": "^5.66.0",
+    "ag-charts-community": "^9.1.1",
+    "ag-charts-react": "^9.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
@@ -53,9 +55,6 @@
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
-    "vega": "^5.26.2",
-    "vega-embed": "^6.22.2",
-    "vega-lite": "^5.16.3",
     "zod": "^3.24.2"
   },
   "devDependencies": {
