--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "firebase": "^11.3.0",
     "genkit": "^1.0.4",
     "lucide-react": "^0.475.0",
+    "mongodb": "6.8.0",
     "next": "15.2.3",
     "next-themes": "^0.3.0",
     "papaparse": "^5.4.1",
@@ -70,4 +71,3 @@
     "typescript": "^5"
   }
 }
-
